--- a/movies-app/package.json
+++ b/movies-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "axios": "^1.7.9",
     "movies-app": "file:",
     "next": "15.1.7",
